--- a/frontend/src/components/partials/Top-nav.css
+++ b/frontend/src/components/partials/Top-nav.css
@@ -56,3 +56,11 @@
     border-radius: 50%;
     margin-left: 2px;
 }
+.white-icon {
+    color: #e6e6e6;
+}
+.right-icons {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
